--- a/index.html
+++ b/index.html
@@ -21,106 +21,106 @@
 
     <!--the time blocks (to see the css that was added via html check out 05-Third-Party-APIs/ 02-Challenge/ lines 43-47 in the html)-->
 
-    <div id="hour-8" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
+    <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
       <div>8AM</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
       </button>
     </div>
 
-    <div id="hour-9" class="row time-block">
+    <div id="hour-09" class="row time-block">
       <div>9AM</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-10" class="row time-block">
       <div>10AM</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-11" class="row time-block">
       <div>11AM</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-12" class="row time-block">
       <div>12pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-13" class="row time-block">
       <div>1pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-14" class="row time-block">
       <div>2pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-15" class="row time-block">
       <div>3pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-16" class="row time-block">
       <div>4pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-17" class="row time-block">
       <div>5pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-18" class="row time-block">
       <div>6pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-19" class="row time-block">
       <div>7pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-20" class="row time-block">
       <div>8pm</div>
-      <textarea class="description" rows="3"></textarea>
-      <button class="btn savebtn" aria-label="regular">
+      <textarea id="textInput" class="description" rows="3"></textarea>
+      <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -154,8 +154,8 @@
 
 
 
-
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
   <script src="https://kit.fontawesome.com/0ee96920fc.js" crossorigin="anonymous"></script><!--used for the icons in the save/play buttons for the schedular in the html-->
   <script src="./assets/script.js"></script>
 </body>
