--- a/index.html
+++ b/index.html
@@ -21,105 +21,105 @@
 
     <!--the time blocks (to see the css that was added via html check out 05-Third-Party-APIs/ 02-Challenge/ lines 43-47 in the html)-->
 
-    <div id="hour-8" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
+    <div id="hour-8" class="time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
       <div>8AM</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
       </button>
     </div>
 
-    <div id="hour-9" class="row time-block">
+    <div id="hour-9" class="time-block">
       <div>9AM</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-10" class="row time-block">
+    <div id="hour-10" class="time-block">
       <div>10AM</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-11" class="row time-block">
+    <div id="hour-11" class="time-block">
       <div>11AM</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-12" class="row time-block">
+    <div id="hour-12" class="time-block">
       <div>12pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-13" class="row time-block">
+    <div id="hour-13" class="time-block">
       <div>1pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-14" class="row time-block">
+    <div id="hour-14" class="time-block">
       <div>2pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-15" class="row time-block">
+    <div id="hour-15" class="time-block">
       <div>3pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-16" class="row time-block">
+    <div id="hour-16" class="time-block">
       <div>4pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-17" class="row time-block">
+    <div id="hour-17" class="time-block">
       <div>5pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-18" class="row time-block">
+    <div id="hour-18" class="time-block">
       <div>6pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-19" class="row time-block">
+    <div id="hour-19" class="time-block">
       <div>7pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-20" class="row time-block">
+    <div id="hour-20" class="time-block">
       <div>8pm</div>
-      <textarea class="description" rows="3"></textarea>
+      <textarea class="description"></textarea>
       <button class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
