--- a/index.html
+++ b/index.html
@@ -23,103 +23,103 @@
 
     <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
       <div>8AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
       </button>
     </div>
 
-    <div id="hour-09" class="row time-block">
+    <div id="hour-09" class="time-block">
       <div>9AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-10" class="row time-block">
+    <div id="hour-10" class="time-block">
       <div>10AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-11" class="row time-block">
+    <div id="hour-11" class="time-block">
       <div>11AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-12" class="row time-block">
+    <div id="hour-12" class="time-block">
       <div>12pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-13" class="row time-block">
+    <div id="hour-13" class="time-block">
       <div>1pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-14" class="row time-block">
+    <div id="hour-14" class="time-block">
       <div>2pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-15" class="row time-block">
+    <div id="hour-15" class="time-block">
       <div>3pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-16" class="row time-block">
+    <div id="hour-16" class="time-block">
       <div>4pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-17" class="row time-block">
+    <div id="hour-17" class="time-block">
       <div>5pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-18" class="row time-block">
+    <div id="hour-18" class="time-block">
       <div>6pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-19" class="row time-block">
+    <div id="hour-19" class="time-block">
       <div>7pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
-    <div id="hour-20" class="row time-block">
+    <div id="hour-20" class="time-block">
       <div>8pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="textInput" class="description"></textarea>
       <button id="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
