--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
       <div>8AM</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
       </button>
     </div>
@@ -32,15 +32,15 @@
     <div id="hour-09" class="row time-block">
       <div>9AM</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
 
     <div id="hour-10" class="row time-block">
       <div>10AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <textarea id="textInput10" class="description" rows="3"></textarea>
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -48,7 +48,7 @@
     <div id="hour-11" class="row time-block">
       <div>11AM</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -56,7 +56,7 @@
     <div id="hour-12" class="row time-block">
       <div>12pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -64,7 +64,7 @@
     <div id="hour-13" class="row time-block">
       <div>1pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -72,7 +72,7 @@
     <div id="hour-14" class="row time-block">
       <div>2pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -80,7 +80,7 @@
     <div id="hour-15" class="row time-block">
       <div>3pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -88,7 +88,7 @@
     <div id="hour-16" class="row time-block">
       <div>4pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -96,7 +96,7 @@
     <div id="hour-17" class="row time-block">
       <div>5pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -104,7 +104,7 @@
     <div id="hour-18" class="row time-block">
       <div>6pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
@@ -112,17 +112,10 @@
     <div id="hour-19" class="row time-block">
       <div>7pm</div>
       <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
+      <button class="saveButton" class="btn savebtn" aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
-
-    <div id="hour-20" class="row time-block">
-      <div>8pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
-      <button id="saveButton" class="btn savebtn" aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
     </div>
   </div>
   
@@ -135,14 +128,22 @@
 
   <!--basic structure for youtube player. may need to add more later------------------------------------------------------------------->
 
-  <div class="youtubeContainer">
+  <!-- <div class="youtubeContainer">
     <h2>Youtube</h2>
     <input id="youtubeSearchInput" type="text" placeholder="Don't waste too much time!">
-    <button id="youtubeBtn"><!--add an onclick event that is connected to the id in the input above-->
-      <i class="fa-brands fa-youtube"></i><!--icon used for play button-->
+    <button id="youtubeBtn">
+      <i class="fa-brands fa-youtube"></i>
     </button>
-  </div>
+  </div> -->
+<div class="youtubeContainer">
+  <h1>YouTube</h1>
+  <h3>You like distractions.</h3>
 
+  <input type="text" id="searchInput" placeholder="How about some cats?">
+  <button onclick="searchYoutube()"> <i class="fa-brands fa-youtube"></i></button>
+
+  <div id="player"></div>
+</div>
   <!--basic structure for the github repositorie. may need to add more later----------------------------------------------------------->
 
   <div>
