added clear button for local storage

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
     </div>
+    <div>
+      <button id="clearButton" onclick="clearLocalStorage()">Clear</button>
+    </div>
     </div>
   </div>
   
