--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <!--we will need to add the weather api script (will possibly need to go at the end of the body)-->
   <!--we will need to add the youtube api script (will possibly need to go at the end of the body)-->
   <!--we will need to add the github api script (will possibly need to go at the end of the body)-->
@@ -131,16 +132,18 @@
   <div class="weatherBox">
     <h2>Your Daily Forecast</h2> <!--just used daily but if we want weekly we will fix later-->
     <div class="weatherCast" id="weather">
-      <input type="text" class="search-bar">
-      <button><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.1em" width="1.1em" xmlns="http://www.w3.org/2000/svg"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></button>
     </div>
-    <div class="weather">
-      <h2 class="city">Weather in Denver</h2>
-      <div class = "temp">70°F</div>
-      <img src="" alt=""  class="icon" />
-      <div class="description">Cloudy</div>
-      <div class="sunrise">Sunrise: 6:00 am</div>
-      <div class="sunset">Sunset:5:45 pm</div>
+    <div class="weather" id="current-weather">
+      <h2 class="city" id="current-city"></h2>
+      <div class = "temp" id="current-temp">Temp: 70° F</div>
+      <img src="" alt=""  class="icon" id="description-icon" />
+      <div class="description" id="weather-description">Conditions:</div>
+      <br>
+      <div class="sunrise" id="morning-sun"></div>
+      <div class="sunset" id="evening-sun"></div>
+      <br>
+      <input type="text" placeholder="Search city" class="search-bar">
+      <button id="search-button"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.1em" width="1.1em" xmlns="http://www.w3.org/2000/svg"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></button>
     </div>
   </div>
 
@@ -168,6 +171,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
   <script src="https://kit.fontawesome.com/0ee96920fc.js" crossorigin="anonymous"></script><!--used for the icons in the save/play buttons for the schedular in the html-->
-  <script src="./assets/script.js"></script>
+  <script src="./assets/weather.js"></script>
 </body>
 </html>
