added imperial units and feels like

--- a/index.html
+++ b/index.html
@@ -130,14 +130,15 @@
   <!--This is just a basic structure for the weather section, feel free to add/or ask me to add/ what you need as this is currently just a wire structure. We will probably need to add much more-->
 
   <div class="weatherBox">
-    <h2>Your Daily Forecast</h2> <!--just used daily but if we want weekly we will fix later-->
+    <h2>Weather Forecast</h2> <!--just used daily but if we want weekly we will fix later-->
     <div class="weatherCast" id="weather">
     </div>
     <div class="weather" id="current-weather">
-      <h2 class="city" id="current-city"></h2>
-      <div class = "temp" id="current-temp">Temp: 70° F</div>
+      <h3 class="city" id="current-city"></h3>
       <img src="" alt=""  class="icon" id="description-icon" />
-      <div class="description" id="weather-description">Conditions:</div>
+      <div class = "temp" id="current-temp"></div>
+      <div class="feelslike" id="feels-like"></div>
+      <div class="description" id="weather-description"></div>
       <br>
       <div class="sunrise" id="morning-sun"></div>
       <div class="sunset" id="evening-sun"></div>
