finished clear function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
       <div>8AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="eight" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
       </button>
@@ -32,7 +32,7 @@
 
     <div id="hour-09" class="row time-block">
       <div>9AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="nine" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -40,7 +40,7 @@
 
     <div id="hour-10" class="row time-block">
       <div>10AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="ten" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -48,7 +48,7 @@
 
     <div id="hour-11" class="row time-block">
       <div>11AM</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="eleven" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -56,7 +56,7 @@
 
     <div id="hour-12" class="row time-block">
       <div>12pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="twelve" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -64,7 +64,7 @@
 
     <div id="hour-13" class="row time-block">
       <div>1pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="one" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -72,7 +72,7 @@
 
     <div id="hour-14" class="row time-block">
       <div>2pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="two" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -80,7 +80,7 @@
 
     <div id="hour-15" class="row time-block">
       <div>3pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="three" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -88,7 +88,7 @@
 
     <div id="hour-16" class="row time-block">
       <div>4pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="four" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -96,7 +96,7 @@
 
     <div id="hour-17" class="row time-block">
       <div>5pm</div>
-      <textarea id="textInput" class="description" rows="3"></textarea>
+      <textarea id="five" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
         <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
       </button>
@@ -167,26 +167,9 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
-  <script src="https://kit.fontawesome.com/0ee96920fc.js" crossorigin="anonymous"></script><!--used for the icons in the save/play buttons for the schedular in the html-->
+  <script src="https://kit.fontawesome.com/0ee96920fc.js" crossorigin="anonymous"></script>
   <script src="./assets/weather.js"></script>
-</body>
-        <!--basic structure for youtube player. may need to add more later------------------------------------------------------------------->
 
-        <!-- <div class="youtubeContainer">
-          <h2>Youtube</h2>
-          <input
-            id="youtubeSearchInput"
-            type="text"
-            placeholder="Don't waste too much time!"
-          />
-          <button id="youtubeBtn">
-        
-            <i class="fa-brands fa-youtube"></i
-           
-          </button>
-        </div> -->
-
-        <!--basic structure for the github repositorie. may need to add more later----------------------------------------------------------->
         <div class="youtubeContainer">
           <h1>YouTube</h1>
           <h3>You like distractions.</h3>
