--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--we will need to add the weather api script (will possibly need to go at the end of the body)-->
-    <!--we will need to add the youtube api script (will possibly need to go at the end of the body)-->
-    <!--we will need to add the github api script (will possibly need to go at the end of the body)-->
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Daily Dashboard</title>
   </head>
@@ -18,7 +15,6 @@
           <h1 class="headerOne">Welcome to your Daily Dashboard</h1>
           <h2>Let's get ready to code!</h2>
           <h3 id="currentDay" class="lead"></h3>
-          <!--Link the DailyJs time and date to this div-->
         </header>
         <!--section for the schedule---------------------------------------------------------------------------------------------------------->
         <!--<div class="scheduleContainer> === the overarching container for the timeblocks-->
@@ -28,7 +24,7 @@
 
     
 
-    <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
+    <div id="hour-08" class="row time-block"> 
       <div>8AM</div>
       <textarea id="eight" class="description" rows="3"></textarea>
       <button class="saveButton"  aria-label="regular">
@@ -134,7 +130,7 @@
   <div class="rightContainer">
     <div class="weatherBox">
       <div class="rightWeather">
-          <h2>Weather Forecast</h2> <!--just used daily but if we want weekly we will fix later-->
+          <h2>Weather Forecast</h2> 
           <button id="search-button"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.1em" width="1.1em" xmlns="http://www.w3.org/2000/svg"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></button>
           <input type="text" placeholder="Search city" class="search-bar">
           <br>
@@ -165,6 +161,7 @@
         </div>
         <div id="player"></div>
       </div>
+      <!--github repos container-->
       <div class="gitHub">
         <h2> <img src="./assets/Images/GitHubIcon.png" alt="" class="githubIcon"> Github User</h2>
         <input
@@ -175,9 +172,11 @@
           placeholder="type user name here"
         />
         <button type="submit" class="gitBtn">Find User</button>
+        <div style="width:400px;height:150px;line-height:3em;overflow:scroll;padding:5px;"><!--added this div to create the scroll box-->
+          <section id="gitRepoLists"></section><!--added this to html delete comment after adding-->
+        </div><!--closing of the scroll box-->
       </div>
     </div>  
-      
   </div>
 
   <!--basic structure for youtube player. may need to add more later------------------------------------------------------------------->
