small changes to youtube div

--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
       </div> 
       <div class="youtubeContainer">
         <h1>YouTube <img src="./assets/Images/YouTubeIcon.png" alt="" class="youtubeIcon"></h1>
-        <h3>You like distractions.</h3>
         <div class="videoInput">
-          <input type="text" id="searchInput" placeholder="How about some cats?">
+          <input type="text" id="searchInput" placeholder="Search Youtube!">
           <button onclick="searchYoutube()"> <i class="fa-brands fa-youtube"></i></button>
         </div>
         <div id="player"></div>
