added missing div and section to html for github

--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
           placeholder="type user name here"
         />
         <button type="submit" class="gitBtn">Find User</button>
+        <div style="width:400px;height:150px;line-height:3em;overflow:scroll;padding:5px;"><!--added this div to create the scroll box-->
+          <section id="gitRepoLists"></section><!--added this to html delete comment after adding-->
+          </div>
       </div>
     </div>  
       
