--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!--we will need to add the github api script (will possibly need to go at the end of the body)-->
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Daily Dashboard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Edu+TAS+Beginner:wght@700&family=Kay+Pho+Du&family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -175,7 +178,7 @@
           placeholder="type user name here"
         />
         <button type="submit" class="gitBtn">Find User</button>
-        <div style="width:400px;height:150px;line-height:3em;overflow:scroll;padding:5px;"><!--added this div to create the scroll box-->
+        <div style="height:350px;line-height:3em;overflow:scroll;"><!--added this div to create the scroll box-->
           <section id="gitRepoLists"></section><!--added this to html delete comment after adding-->
           </div>
       </div>
