padding for github search

--- a/index.html
+++ b/index.html
@@ -170,14 +170,16 @@
       </div>
       <div class="gitHub">
         <h2> <img src="./assets/Images/GitHubIcon.png" alt="" class="githubIcon"> Github User</h2>
-        <input
-          name="username"
-          id="username"
-          type="text"
-          class="form-input"
-          placeholder="type user name here"
-        />
-        <button type="submit" class="gitBtn">Find User</button>
+        <div class="gitSearch">
+          <input
+            name="username"
+            id="username"
+            type="text"
+            class="form-input"
+            placeholder="type user name here"
+          />
+          <button type="submit" class="gitBtn">Find User</button>
+        </div>
         <div style="height:350px;line-height:3em;overflow:scroll;"><!--added this div to create the scroll box-->
           <section id="gitRepoLists"></section><!--added this to html delete comment after adding-->
           </div>
